Move authorization to method security annotations